tests/reference/asr-external1-e4cf9f2.stderr
semantic error: function interface must be specified explicitly; you can enable implicit interfaces with `--implicit-interface`
 --> tests/errors/external1.f90:2:13
  |
2 |    external f
  |             ^ 
